# SentinelPay

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: sentinelpay_colab.ipynb
scripts/: train.py
src/sentinelpay/: __init__.py  config.py  data.py  evaluation.py  features.py  model.py
tests/: test_features.py
