[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelpay"
version = "0.1.0"
description = "Aplicacao Streamlit da SentinelPay para monitoramento de risco de fraude."
requires-python = ">=3.11,<3.13"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
